@@ -1,3 +1,7 @@
+2008-09-24  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
+	* misc/webrick/hikilet.rb: revert change on 2008-01-06,
+	  because ENV[key]=nil behavior of ruby 1.9 reverted.
+
 2008-09-19  okkez  <okkez000@gmail.com>
 
 	* hiki/plugin.rb (Hiki::Plugin#initialize): use
